feat: Added CRUD operations, view models, file read/write

--- a/src/Texode-test-task.Api/Texode-test-task.Api.csproj
+++ b/src/Texode-test-task.Api/Texode-test-task.Api.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="testData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="testData.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
