fix: Cleaning up unused elements

--- a/src/Texode-test-task.DAL/Texode-test-task.DAL.csproj
+++ b/src/Texode-test-task.DAL/Texode-test-task.DAL.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Cards\Images\" />
+    <Folder Include="Data\Images\" />
   </ItemGroup>
 
   <ItemGroup>
