feat: Model validation added, minor bugs fixed.

--- a/src/Texode-test-task.Api/Texode-test-task.Api.csproj
+++ b/src/Texode-test-task.Api/Texode-test-task.Api.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\Texode-test-task.BLL\Texode-test-task.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Images\" />
+  </ItemGroup>
+
 </Project>
