--- a/src/Texode-test-task.Api/Texode-test-task.Api.csproj
+++ b/src/Texode-test-task.Api/Texode-test-task.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,10 +21,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Texode-test-task.BLL\Texode-test-task.BLL.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Images\" />
   </ItemGroup>
 
 </Project>
